# Multi-Agent-ADK

./: .env.example  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  eval.yml
docs/: architecture.md
evaluations/: README.md  eval_smart_info.py  golden_dataset.json
src/agents/smart_info_assistant/: agent.py
src/agents/smart_info_assistant/sub_agents/: country_agent.py  currency_agent.py  joke_agent.py  weather_agent.py
src/agents/tools/: info_tools.py
tests/: README.md  conftest.py
tests/integration/: test_agents.py
tests/unit/: test_tools.py
